Sprint 5 final task. Refactor and test added.